# tracking-transfer-token-bot

./: .gitignore  Cargo.toml  README.md
src/: get_config.rs  get_event.rs  lib.rs  main.rs  send_message_to_telegram.rs  solana_adapter.rs  types.rs
src/asset/: abi.json  config.json  list_of_rpc.json
