[package]
name = "tracking-transfer-token-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
ethers = "2.0.14"
ethers-providers = "2.0.14"
futures = "0.3.31"
num_cpus = "1.17.0"
serde = "1.0.219"
serde_json = "1.0.141"
solana-client = "3.0.2"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.2"
spl-token = "8.0.0"
telebot = "0.3.1"
telegram-bot = "0.8.0"
teloxide = "0.17.0"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
